--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
         <item>2</item>
         <item>2.5</item>
         <item>3</item>
+        <item>3.5</item>
     </string-array>
 
 </resources>
