--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
         <item>2.5</item>
         <item>3</item>
     </string-array>
+    <string name="ruth">Ruth is here</string>
 
 </resources>
