--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="returnProductImage">Return Product Image</string>
     <string name="deliveryStatus">Delivery Status</string>
     <string name="adminViewFeedback">Admin View Customer Feedback</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="saveProfile">Save Profile</string>
 
 
     <string name="hello_first_fragment">Hello first fragment</string>
