--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_myCart">My Cart</string>
     <string name="menu_myOrder">My Order</string>
     <string name="menu_aboutUs">About Us</string>
+    <string name="menu_feedback">Write a feedback</string>
     <string name="menu_logOut">Log Out</string>
     <string-array name="spinnerBankTypes">
         <item>Alliance Bank</item>
