--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,10 @@
     <string name="adminViewFeedback">Admin View Customer Feedback</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="saveProfile">Save Profile</string>
+    <string name="OrderDate">Ordered Date</string>
+    <string name="amountPayed">Total Amount</string>
+    <string name="deliveryAddress">Delivery Address</string>
+    <string name="dateOfOrderPlaced">Date Of Order Placed</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
