--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="amountPayed">Total Amount</string>
     <string name="deliveryAddress">Delivery Address</string>
     <string name="dateOfOrderPlaced">Date Of Order Placed</string>
+    <string name="comments">Comments:</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
