ruth- user profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="deliveryStatus">Delivery Status</string>
     <string name="adminViewFeedback">Admin View Customer Feedback</string>
     <string name="edit_profile">Edit Profile</string>
+    <string name="saveProfilePicture">Save Profile Picture</string>
     <string name="saveProfile">Save Profile</string>
     <string name="OrderDate">Ordered Date</string>
     <string name="amountPayed">Total Amount</string>
