--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="deliveryAddress">Delivery Address</string>
     <string name="dateOfOrderPlaced">Date Of Order Placed</string>
     <string name="comments">Comments:</string>
+    <string name="updateDeliveryStatus">Update Delivery Status</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
