--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="comments">Comments:</string>
     <string name="updateDeliveryStatus">Update Delivery Status</string>
 
+    <string name="deliveredItems">Delivered Items</string>
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hello">My name is Ruth</string>
