--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
         <item>3</item>
     </string-array>
 
+    <string name="rateDialog">If you enjoyed our delivery service, please do rate our services if you would like to</string>
+
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
