--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="updateDeliveryStatus">Update Delivery Status</string>
 
     <string name="deliveredItems">Delivered Items</string>
+    <string name="hi">Hi</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
