--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,8 @@
     <string name="deliveredItems">Delivered Items</string>
     <string name="hi">Hi</string>
 
+    <string name="yoo">Yo</string>
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hello">My name is Ruth</string>
