ruth - combine map for delivery module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <string name="title_activity_admin_main">AdminMainActivity</string>
     <string name="title_activity_admin_main_new">AdminMainActivityNew</string>
     <string name="title_activity_admin_main_latest">AdminMainActivityLatest</string>
+    <string name="title_activity_delivery_tracker_maps">DeliveryTrackerMapsActivity</string>
 </resources>
