ruth - combine map for delivery module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,6 @@
     <string name="title_activity_admin_main_new">AdminMainActivityNew</string>
     <string name="title_activity_admin_main_latest">AdminMainActivityLatest</string>
     <string name="title_activity_delivery_tracker_maps">DeliveryTrackerMapsActivity</string>
+    <string name="admin_delivery_management">Admin Delivery Management</string>
+    <string name="update_delivery_status">Update Delivery Status</string>
 </resources>
